fixed css margin alignment with .alert class

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -137,7 +137,7 @@
 	}
 	.alert
 	{
-		margin-top:75px;
+		margin-top:250px;
 		text-align: center;
 		color:#000;
 	}
